--- a/release.gradle
+++ b/release.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'maven-publish'
+apply plugin: 'com.github.johnrengelman.shadow'
+
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
@@ -14,9 +16,17 @@ javadoc() {
     failOnError = false
 }
 
+shadowJar {
+    dependencies {
+        include dependency('com.github.avarabyeu:restendpoint-jdk6')
+    }
+    classifier = null
+    relocate 'com.github.avarabyeu.restendpoint', 'com.epam.restendpoint'
+}
+
 publishing {
     publications {
-        mavenJava(MavenPublication) {
+        shadow(MavenPublication) {
             pom.withXml {
                 asNode().dependencies.'*'.findAll() {
                     it.scope.text() == 'runtime' && project.configurations.compile.allDependencies.find { dep ->
@@ -29,8 +39,8 @@ publishing {
             from components.java
             groupId 'com.epam.reportportal'
             artifactId "$project.name"
-            artifact sourcesJar
-            artifact javadocJar
+//            artifact shadowJar
+//            artifact javadocJar
         }
     }
 }
