--- a/build.gradle
+++ b/build.gradle
@@ -19,32 +19,65 @@ repositories {
     maven { url "http://dl.bintray.com/epam/reportportal" }
     maven { url "https://jitpack.io" }
 }
-configurations.shadow.extendsFrom(configurations.runtime)
+
+sourceSets {
+    main {
+        compileClasspath += configurations.shadow
+        runtimeClasspath += configurations.shadow
+    }
+    test {
+        compileClasspath += configurations.shadow
+        runtimeClasspath += configurations.shadow
+    }
+}
+
+//configurations.shadow.extendsFrom(configurations.runtime)
+
+shadowJar {
+//    configurations = [project.configurations.runtime]
+
+    dependencies {
+        include(dependency('com.github.avarabyeu:restendpoint-jdk6'))
+        include(dependency('org.apache.httpcomponents:httpasyncclient'))
+        include(dependency('org.apache.httpcomponents:httpmime'))
+        include(dependency('org.apache.httpcomponents:httpcore'))
+        include(dependency('org.apache.httpcomponents:httpcore-nio'))
+        include(dependency('org.apache.httpcomponents:httpclient'))
+        include(dependency('commons-logging:commons-logging'))
+        include(dependency('com.google.guava:guava'))
+
+    }
+    classifier = null
+    relocate 'com.github.avarabyeu.restendpoint', 'com.epam.restendpoint'
+    relocate 'org.apache.http', 'repacked.org.apache.http'
+    relocate 'com.google.common', 'repacked.com.google.common'
+    relocate 'org.apache.commons.logging', 'repacked.org.apache.commons.logging'
+}
 
 dependencies {
 
     //compile 'com.epam.reportportal:commons-model:2.6.0'
-    compile 'com.github.reportportal:commons-model:34d9561455'
-    
-    compile  'com.google.inject:guice:4.1.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.6'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.6'
+    shadow 'com.github.reportportal:commons-model:34d9561455'
 
-    compile 'org.apache.tika:tika-core:1.4'
-    compile 'org.slf4j:slf4j-api:1.7.2'
+    compile 'com.google.guava:guava:20.0'
+    compile 'com.github.avarabyeu:restendpoint-jdk6:0.2.0'
+
+    shadow ('com.google.inject:guice:4.1.0')
+    shadow 'com.fasterxml.jackson.core:jackson-databind:2.8.6'
+    shadow 'io.reactivex.rxjava2:rxjava:2.0.6'
+    shadow 'org.apache.tika:tika-core:1.4'
+    shadow 'org.slf4j:slf4j-api:1.7.2'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
-
-    compileOnly 'com.google.guava:guava:20.0'
-    compileOnly 'com.github.avarabyeu:restendpoint-jdk6:0.2.0'
 }
 
 test.useTestNG()
 test.maxParallelForks = 1
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.0'
+    gradleVersion = '3.1'
 }
 
 
@@ -62,22 +95,6 @@ javadoc() {
     failOnError = false
 }
 
-shadowJar {
-    configurations = [project.configurations.runtime]
-
-    dependencies {
-        include(dependency('com.github.avarabyeu:restendpoint-jdk6'))
-        include(dependency('org.apache.httpcomponents:httpasyncclient'))
-        include(dependency('org.apache.httpcomponents:httpmime'))
-        include(dependency('com.google.guava:guava'))
-
-    }
-    classifier = null
-    relocate 'com.github.avarabyeu.restendpoint', 'com.epam.restendpoint'
-    relocate 'org.apache.http', 'repacked.org.apache.http'
-    relocate 'com.google.common', 'repacked.com.google.common'
-}
-
 
 publishing {
     publications {
@@ -86,7 +103,7 @@ publishing {
             pom.withXml {
                 def root = asNode()
                 root.dependencies.'*'.findAll() {
-                    it.scope.text() == 'runtime' && project.configurations.compile.allDependencies.find { dep ->
+                    it.scope.text() == 'runtime' && project.configurations.shadow.allDependencies.find { dep ->
                         dep.name == it.artifactId.text()
                     }
                 }.each() {
