--- a/build.gradle
+++ b/build.gradle
@@ -57,16 +57,17 @@ shadowJar {
 dependencies {
 
     //compile 'com.epam.reportportal:commons-model:2.6.0'
-    shadow 'com.github.reportportal:commons-model:137b0821b7'
+    shadow 'com.github.reportportal:commons-model:c26a592522'
 
     compile 'com.google.guava:guava:20.0'
-    compile 'com.github.avarabyeu:restendpoint-jdk6:0.2.0'
+    compile 'com.github.avarabyeu:restendpoint-jdk6:0.2.2'
 
     shadow ('com.google.inject:guice:4.1.0')
     shadow 'com.fasterxml.jackson.core:jackson-databind:2.8.6'
     shadow 'io.reactivex.rxjava2:rxjava:2.0.6'
     shadow 'org.apache.tika:tika-core:1.4'
     shadow 'org.slf4j:slf4j-api:1.7.2'
+    shadow 'com.google.code.findbugs:findbugs:3.0.1'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
