--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'net.researchgate.release' version '2.4.1'
-    id "com.jfrog.bintray" version "1.7"
 }
 apply plugin: 'java'
 apply from: 'release.gradle'
@@ -10,10 +9,9 @@ targetCompatibility = 1.7
 description = 'EPAM Report portal. Client'
 
 repositories {
-    jcenter()
-    maven { url "http://dl.bintray.com/epam/reportportal" }
-
+    mavenCentarl()
 }
+
 dependencies {
     compile 'com.epam.reportportal:commons-model:2.6.0'
     compile 'com.google.guava:guava:18.0'
